--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: compile x86 mac
         run: |    
           deno compile --target x86_64-apple-darwin --output kubectl-infra --allow-read --allow-write --allow-net mod.ts 
-          zip kubectl-infra-x86-mac.zip kubectl-infra
+          zip kubectl-infra-x86mac.zip kubectl-infra
       - name: compile linux
         run: |
           deno compile --target x86_64-unknown-linux-gnu --output kubectl-infra --allow-read --allow-write --allow-net mod.ts 
@@ -38,6 +38,6 @@ jobs:
       - uses: ncipollo/release-action@v1
         with:
           removeArtifacts: true
-          artifacts: "kubectl-infra-m1mac,kubectl-infra-x86mac,kubectl-infra-linux,kubectl-infra-windows.exe"
+          artifacts: "kubectl-infra-m1mac.zip,kubectl-infra-x86mac.zip,kubectl-infra-linux.zip,kubectl-infra-windows.zip"
           tag: "latest"
           bodyFile: "README.md"
