--- a/grants.yaml
+++ b/grants.yaml
@@ -12,4 +12,19 @@ spec:
       matchLabels:
         os: darwin
         arch: arm64
-    uri: https://github.com/technovangelist/kubectl-infra/releases/download/latest/kubectl-infra-x86mac
+    uri: https://github.com/technovangelist/kubectl-infra/releases/download/latest/kubectl-infra-m1mac.zip
+  - selector:
+      matchLabels:
+        os: darwin
+        arch: amd64
+    uri: https://github.com/technovangelist/kubectl-infra/releases/download/latest/kubectl-infra-x86mac.zip
+  - selector:
+      matchLabels:
+        os: linux
+        arch: amd64
+    uri: https://github.com/technovangelist/kubectl-infra/releases/download/latest/kubectl-infra-linux.zip
+  - selector:
+      matchLabels:
+        os: windows
+        arch: amd64
+    uri: https://github.com/technovangelist/kubectl-infra/releases/download/latest/kubectl-infra-windows.zip
