--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,6 +35,8 @@ jobs:
         run: |
           deno compile --target x86_64-pc-windows-msvc --output kubectl-infra --allow-read --allow-write --allow-net mod.ts
           zip kubectl-infra-windows.zip kubectl-infra.exe
+      - name: krew release bot
+        uses: https://github.com/rajatjindal/krew-release-bot
       - uses: ncipollo/release-action@v1
         with:
           removeArtifacts: true
