--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,24 +22,25 @@ jobs:
       - name: compile m1
         run: |
           deno compile --target aarch64-apple-darwin --output kubectl-infra --allow-read --allow-write --allow-net mod.ts 
-          zip kubectl-infra-m1mac.zip kubectl-infra 
-      - name: compile x86 mac
-        run: |    
-          deno compile --target x86_64-apple-darwin --output kubectl-infra --allow-read --allow-write --allow-net mod.ts 
-          zip kubectl-infra-x86mac.zip kubectl-infra
-      - name: compile linux
-        run: |
-          deno compile --target x86_64-unknown-linux-gnu --output kubectl-infra --allow-read --allow-write --allow-net mod.ts 
-          zip kubectl-infra-linux.zip kubectl-infra
-      - name: compile windows
-        run: |
-          deno compile --target x86_64-pc-windows-msvc --output kubectl-infra --allow-read --allow-write --allow-net mod.ts
-          zip kubectl-infra-windows.zip kubectl-infra.exe
+          zip kubectl-infra-m1mac.zip kubectl-infra
+      # - name: compile x86 mac
+      #   run: |
+      #     deno compile --target x86_64-apple-darwin --output kubectl-infra --allow-read --allow-write --allow-net mod.ts
+      #     zip kubectl-infra-x86mac.zip kubectl-infra
+      # - name: compile linux
+      #   run: |
+      #     deno compile --target x86_64-unknown-linux-gnu --output kubectl-infra --allow-read --allow-write --allow-net mod.ts
+      #     zip kubectl-infra-linux.zip kubectl-infra
+      # - name: compile windows
+      #   run: |
+      #     deno compile --target x86_64-pc-windows-msvc --output kubectl-infra --allow-read --allow-write --allow-net mod.ts
+      #     zip kubectl-infra-windows.zip kubectl-infra.exe
       - name: krew release bot
         uses: rajatjindal/krew-release-bot@v0.0.43
       - uses: ncipollo/release-action@v1
         with:
           removeArtifacts: true
-          artifacts: "kubectl-infra-m1mac.zip,kubectl-infra-x86mac.zip,kubectl-infra-linux.zip,kubectl-infra-windows.zip"
+          # artifacts: "kubectl-infra-m1mac.zip,kubectl-infra-x86mac.zip,kubectl-infra-linux.zip,kubectl-infra-windows.zip"
+          artifacts: "kubectl-infra-m1mac.zip"
           tag: "latest"
           bodyFile: "README.md"
