--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,7 +2,10 @@ name: build
 on:
   push:
     tags:
-      - "v*.*.*"
+      - "*.*.*"
+    branches: [main]
+  pull_request:
+    branches: [main]
 jobs:
   build:
     runs-on: ubuntu-latest
