.github/workflows/main:

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,8 +37,11 @@ jobs:
       #   run: |
       #     deno compile --target x86_64-pc-windows-msvc --output kubectl-infra --allow-read --allow-write --allow-net mod.ts
       #     zip kubectl-infra-windows.zip kubectl-infra.exe
-      - name: krew release bot
-        uses: rajatjindal/krew-release-bot@v0.0.43
+      - name: Generate Release Hashes
+        uses: MCJack123/ghaction-Generate-Release-Hashes@v4
+
+      # - name: krew release bot
+      #   uses: rajatjindal/krew-release-bot@v0.0.43
       - uses: ncipollo/release-action@v1
         with:
           removeArtifacts: true
