modified main.yaml in workflows
Signed-off-by: Matt Williams <m@technovangelist.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,7 +44,7 @@ jobs:
           valueFile: 'krew.yaml'
           propertyPath: '$.spec.platforms[0].sha256'
           value: steps.compile-m1.outputs.hash
-          commitChange: true
+          createPR: true
 
 
       # - name: krew release bot
