modified main.yaml in workflows
Signed-off-by: Matt Williams <m@technovangelist.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -45,6 +45,8 @@ jobs:
           propertyPath: '$.spec.platforms[0].sha256'
           value: steps.compile-m1.outputs.hash
           createPR: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+
 
 
       # - name: krew release bot
