--- a/krew.yaml
+++ b/krew.yaml
@@ -20,7 +20,7 @@ spec:
           os: darwin
           arch: amd64
       uri: https://github.com/technovangelist/kubectl-infra/releases/download/latest/kubectl-infra-x86mac.zip
-      sha256: xxx
+      sha256: xxxtt
       bin: kubectl-infra
     - selector:
         matchLabels:
