--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,7 +43,7 @@ jobs:
         with:
           valueFile: "krew.yaml"
           propertyPath: "$.spec.platforms[0].sha256"
-          value: steps.compilem1.outputs.hash
+          value: ${{ steps.compilem1.outputs.hash }}
           commitChange: true
           token: ${{ secrets.GITHUB_TOKEN }}
           masterBranchName: main
