--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,6 +38,14 @@ jobs:
       #   run: |
       #     deno compile --target x86_64-pc-windows-msvc --output kubectl-infra --allow-read --allow-write --allow-net mod.ts
       #     zip kubectl-infra-windows.zip kubectl-infra.exe
+
+      - uses: ncipollo/release-action@v1
+        id: releaseaction
+        with:
+          removeArtifacts: true
+          # artifacts: "kubectl-infra-m1mac.zip,kubectl-infra-x86mac.zip,kubectl-infra-linux.zip,kubectl-infra-windows.zip"
+          artifacts: "kubectl-infra-m1mac.zip"
+          bodyFile: "README.md"
       - name: Update values.yaml
         uses: fjogeleit/yaml-update-action@main
         with:
@@ -50,12 +58,9 @@ jobs:
           masterBranchName: main
           branch: main
           targetBranch: main
+          changes: |
+            {
+            	"$.spec.platforms[0].sha256": "${{ steps.compilem1.outputs.hash }}",
+              "$.spec.platforms[0].uri": "${{ steps.releaseaction.outputs.html_url }}",
 
-      # - name: krew release bot
-      #   uses: rajatjindal/krew-release-bot@v0.0.43
-      - uses: ncipollo/release-action@v1
-        with:
-          removeArtifacts: true
-          # artifacts: "kubectl-infra-m1mac.zip,kubectl-infra-x86mac.zip,kubectl-infra-linux.zip,kubectl-infra-windows.zip"
-          artifacts: "kubectl-infra-m1mac.zip"
-          bodyFile: "README.md"
+            }
