--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -60,7 +60,7 @@ jobs:
           targetBranch: main
           changes: |
             {
-            	"$.spec.platforms[0].sha256": "${{ steps.compilem1.outputs.hash }}",
-              "$.spec.platforms[0].uri": "${{ steps.releaseaction.outputs.html_url }}",
+            	"$.spec.platforms.0.sha256": "${{ steps.compilem1.outputs.hash }}",
+              "$.spec.platforms.0.uri": "${{ steps.releaseaction.outputs.html_url }}",
 
             }
