--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,6 +46,11 @@ jobs:
           # artifacts: "kubectl-infra-m1mac.zip,kubectl-infra-x86mac.zip,kubectl-infra-linux.zip,kubectl-infra-windows.zip"
           artifacts: "kubectl-infra-m1mac.zip"
           bodyFile: "README.md"
+
+      - uses: MCJack123/ghaction-generate-release-hashes@v3
+        with:
+          hash-type: sha256
+          file-name: hashes.txt
       - name: Update values.yaml
         uses: fjogeleit/yaml-update-action@main
         with:
