--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3.2.0
 
       - name: Setup Deno
-        uses: denoland/setup-deno@v1
+        uses: denoland/setup-deno@v1.1.1
         with:
           deno-version: v1.x
 
@@ -41,7 +41,7 @@ jobs:
       - uses: ncipollo/release-action@v1
         id: releaseaction
         with:
-          removeArtifacts: true
+          # removeArtifacts: true
           # artifacts: "kubectl-infra-m1mac.zip,kubectl-infra-x86mac.zip,kubectl-infra-linux.zip,kubectl-infra-windows.zip"
           artifacts: "kubectl-infra-m1mac.zip"
           bodyFile: "README.md"
