--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,10 +21,9 @@ jobs:
       - name: Compile for Mac M1
         id: compilem1
         run: |
+          rm kubectl-infra-m1mac.zip
           deno compile --target aarch64-apple-darwin --output kubectl-infra --allow-read --allow-write --allow-net mod.ts 
           zip kubectl-infra-m1mac.zip kubectl-infra
-          HASH=$(sha256sum -b kubectl-infra-m1mac.zip | awk '{print $1}')
-          echo "hash=$HASH" >> $GITHUB_OUTPUT
       - name: Generate checksum for M1
         id: checksumm1
         run: |
