modified main.yaml in workflows
Signed-off-by: Matt Williams <m@technovangelist.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -52,7 +52,7 @@ jobs:
         with:
           valueFile: "krew.yaml"
           commitChange: true
-          message: "Updated hash for releases"
+          message: "Updated hash for releases."
           token: ${{ secrets.GITHUB_TOKEN }}
           masterBranchName: main
           branch: main
