--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,7 +22,7 @@ jobs:
         id: compilem1
         run: |
           rm kubectl-infra-m1mac.zip
-          deno compile --target aarch64-apple-darwin --output kubectl-infra --allow-run=infra --allow-read --allow-write --allow-net mod.ts 
+          deno compile --target aarch64-apple-darwin --output kubectl-infra --allow-run=infra --allow-run=kubectl --allow-read --allow-write --allow-net mod.ts 
           zip kubectl-infra-m1mac.zip kubectl-infra
           HASH=$(sha256sum -b kubectl-infra-m1mac.zip | awk '{print $1}')
           echo "hash=$HASH" >> $GITHUB_OUTPUT
