modified main.yaml in workflows
Signed-off-by: Matt Williams <m@technovangelist.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -51,7 +51,7 @@ jobs:
         id: releaseaction
         with:
           removeArtifacts: true
-          artifacts: "kubecstl-infra-m1mac.zip,kubectl-infra-x86mac.zip,kubectl-infra-linux.zip,kubectl-infra-windows.zip"
+          artifacts: "kubectl-infra-m1mac.zip,kubectl-infra-x86mac.zip,kubectl-infra-linux.zip,kubectl-infra-windows.zip"
           # artifacts: "kubectl-infra-m1mac.zip"
           bodyFile: "README.md"
 
