modified main.yaml in workflows
Signed-off-by: Matt Williams <m@technovangelist.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -55,6 +55,7 @@ jobs:
         with:
           valueFile: "krew.yaml"
           commitChange: true
+          updateFile: true
           message: "Updated hash for releases."
           token: ${{ secrets.GITHUB_TOKEN }}
           masterBranchName: main
