modified main.yaml in workflows
Signed-off-by: Matt Williams <m@technovangelist.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -54,12 +54,13 @@ jobs:
         uses: fjogeleit/yaml-update-action@main
         with:
           valueFile: "krew.yaml"
-          createPR: true
+          createPR: 'true'
           message: "Updated hash for releases."
+          title: 'Update'
           token: ${{ secrets.GITHUB_TOKEN }}
           masterBranchName: main
-          # branch: main
-          # targetBranch: main
+          branch: main
+          targetBranch: main
           changes: |
             {
             	"$.spec.platforms.0.sha256": "${{ steps.compilem1.outputs.hash }}",
